--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Voila!</h1>
-        <p>This is a simple, clean, and modern design.</p>
+        <p>A tiny website to start with</p>
     </header>
     <main>
         <section class="content">
@@ -27,7 +27,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Your Name. All Rights Reserved.</p>
+        <p>&copy; 2024 CuriosityFTW. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
