--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="content">
             <h2>My Projects</h2>
             <ul>
-                <li><a href="https://www.youtube.com/">Project 1</a></li>
+                <li><a href="https://medium.com/curiosityftw">My Blog</a></li>
                 <li><a href="#">Project 2</a></li>
                 <li><a href="#">Project 3</a></li>
             </ul>
