--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h2>My Projects</h2>
             <ul>
                 <li><a href="https://medium.com/curiosityftw">My Blog</a></li>
-                <li><a href="#">Project 2</a></li>
+                <li><a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/">LinkedIn</a></li>
                 <li><a href="#">Project 3</a></li>
             </ul>
         </section>
