--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello there!</title>
+    <title>CuriosityFTW</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Voila!</h1>
-        <p>A tiny website to start with</p>
+        <h1>Hello there!</h1>
+        <p>Website construction in progress...</p>
     </header>
     <main>
         <section class="content">
@@ -22,7 +22,6 @@
             <ul>
                 <li><a href="https://medium.com/curiosityftw">My Blog</a></li>
                 <li><a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/">LinkedIn</a></li>
-                <li><a href="#">Project 3</a></li>
             </ul>
         </section>
     </main>
