--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <section class="content">
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</p>
+            <p>Will introduce myself soon. Lazily building this website for now.</p>
         </section>
         <section class="content">
             <h2>My Projects</h2>
