--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </header>
     <main>
         <section class="content">
-            <h2>About Me</h2>
-            <p>Will introduce myself soon. Lazily building this website for now.</p>
+            <h2>About me</h2>
+            <p>Lazily learning and building this website, so will introduce myself soon. Check out the links below for now.</p>
         </section>
         <section class="content">
-            <h2>My Projects</h2>
+            <h2>Also about me</h2>
             <ul>
                 <li><a href="https://medium.com/curiosityftw">My Blog</a></li>
                 <li><a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/">LinkedIn</a></li>
