--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section class="content">
             <h2>About me</h2>
             <p>Lazily learning and building this website, so will introduce myself soon. Check out the links below for now.</p>
-            <img src"https://www.google.com/url?sa=i&url=https%3A%2F%2Ftvgag.com%2Ftag%2Fjim-halpert%2F&psig=AOvVaw3slewUTFQuUw5oItc3FowC&ust=1734157549766000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLiUr8COpIoDFQAAAAAdAAAAABBf"/>
+            <img src"https://cdn.tvgag.com/content/quotes/10338_500.jpg"/>
         </section>
         <section class="content">
             <h2>Also about me</h2>
