--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <img src"https://cdn.tvgag.com/content/quotes/10338_500.jpg"/>
         </section>
         <section class="content">
+            <img src"https://cdn.tvgag.com/content/quotes/10338_500.jpg"/>
+        </section>        
+        <section class="content">
             <h2>Also about me</h2>
             <ul>
                 <li><a href="https://medium.com/curiosityftw">My Blog</a></li>
