--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
         <section class="content">
             <h2>About me</h2>
             <p>Lazily learning and building this website, so will introduce myself soon. Check out the links below for now.</p>
-            <img src"https://cdn.tvgag.com/content/quotes/10338_500.jpg"/>
-        </section>
-        <section class="content">
-            <img src"https://cdn.tvgag.com/content/quotes/10338_500.jpg"/>
-        </section>        
+            <img src="https://cdn.tvgag.com/content/quotes/10338_500.jpg"/>
+        </section>       
         <section class="content">
             <h2>Also about me</h2>
             <ul>
