--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div style="text-align: left; margin-top: 20px;">
+        <img src="images/my_picture.jpg" style="border-radius: 50%; width: 100px; height: 100px;">
+    </div>
     <header>
         <h1>Hello there!</h1>
         <p>Website construction in progress...</p>
