--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     -->
     <header>
-        <img src="images/profile.jpg" class="profile_pic">
+        <img src="images/my_picture.jpg">
         <h1>Hello there!</h1>
         <p>Website construction in progress...</p>
     </header>
