--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     -->
     <header>
         <img src="images/my_picture.jpg">
-        <h1>Hello there!</h1>
-        <p>Website construction in progress...</p>
+        <div class="header_text">
+            <h1>Hello there!</h1>
+            <p>Website construction in progress...</p>
+        </div>
     </header>
     <main>
         <section class="content">
