--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     </div>
     -->
     <header>
-        <img src="images/my_picture.jpg">
-        <div class="header_text">
-            <h1>Hello there!</h1>
-            <p>Website construction in progress...</p>
+        <div class="header_items">
+            <img src="images/my_picture.jpg">
+            <div class="header_text">
+                <h1>Hello there!</h1>
+                <p>Website construction in progress...</p>
+            </div>
         </div>
     </header>
     <main>
