--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     -->
     <header>
-        <img src="images/my_picture.jpg">
+        <img src="images/selfie.jpg">
         <div class="header_text">
             <h1>Hello there!</h1>
             <p>Website construction in progress...</p>
