--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </main>
     <footer>
         <p>&copy; 2024 CuriosityFTW. All Rights Reserved.</p>
+        <p><?php include 'counter.php'; ?></p>
     </footer>
 </body>
 </html>
