--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         <section class="content">
             <h2>Also about me</h2>
             <ul>
-                <li><a href="https://medium.com/curiosityftw">My Blog</a></li>
+                <li><a href="https://medium.com/curiosityftw">Blog</a></li>
                 <li><a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/">LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/">Projects</a> (updates in progress...) </li>
             </ul>
         </section>
     </main>
