--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <ul>
                 <li><a href="https://medium.com/curiosityftw">Blog</a></li>
                 <li><a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/">LinkedIn</a></li>
-                <li><a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/">Projects</a> (updates in progress...) </li>
+                <li><a href="https://github.com/CuriosityFTW">Projects</a> (updates in progress...) </li>
             </ul>
         </section>
     </main>
