--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <header>
         <img src="images/selfie_3.jpg">
         <div class="header_text">
-            <h1>Hello there!</h1>
-            <p>Website construction in progress...</p>
+            <h1>CuriosityFTW</h1>
+            <p>A mind forever voyaging through turbulent seas of thoughts</p>
         </div>
     </header>
     <main>
