--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
     </header>
     <main>
         <section class="content">
-            <h2>About me</h2>
+            <h1>About me</h1>
+            <h2>In a nutshell</h2>
             <p>Lazily learning and building this website, so will introduce myself soon. Check out the links below for now.</p>
             <img src="https://cdn.tvgag.com/content/quotes/10338_500.jpg"/>
         </section>       
         <section class="content">
-            <h2>Also about me</h2>
+            <h1>Also about me</h1>
             <ul>
                 <li><a href="https://medium.com/curiosityftw">Blog</a></li>
                 <li><a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/">LinkedIn</a></li>
