--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1>About me</h1>
             <h2>In a nutshell</h2>
             <p>Lazily learning and building this website, so will introduce myself soon. Check out the links below for now.</p>
-            <img src="https://cdn.tvgag.com/content/quotes/10338_500.jpg"/>
+            <!--<img src="https://cdn.tvgag.com/content/quotes/10338_500.jpg"/>-->
         </section>       
         <section class="content">
             <h1>Also about me</h1>
