--- a/index.html
+++ b/index.html
@@ -21,20 +21,31 @@
         </div>
     </header>
     <main>
-        <section class="content">
+        <section class="about_me">
             <h1>About me</h1>
             <h2>In a nutshell</h2>
             <p>Lazily learning and building this website, so will introduce myself soon. Check out the links below for now.</p>
             <!--<img src="https://cdn.tvgag.com/content/quotes/10338_500.jpg"/>-->
         </section>       
-        <section class="content">
-            <h1>Also about me</h1>
+        <section class="blog">
+            <h1>Blog</h1>
             <ul>
                 <li><a href="https://medium.com/curiosityftw">Blog</a></li>
+            </ul>
+        </section>
+        <section class="linkedin">
+            <h1>LinkedIn</h1>
+            <ul>
                 <li><a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/">LinkedIn</a></li>
                 <li><a href="https://github.com/CuriosityFTW">Projects</a> (updates in progress...) </li>
             </ul>
         </section>
+        <section class="projects">
+            <h1>Projects</h1>
+            <ul>
+                <li><a href="https://github.com/CuriosityFTW">Projects</a> (updates in progress...) </li>
+            </ul>
+        </section>        
     </main>
     <footer>
         <p>&copy; 2024 CuriosityFTW. All Rights Reserved.</p>
