--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <section class="about_me">
-            <h1>About me</h1>
+            <h1 class="gradient_text">About me</h1>
             <h2>In a nutshell</h2>
             <p>Lazily learning and building this website, so will introduce myself soon. Check out the links below for now.</p>
             <!--<img src="https://cdn.tvgag.com/content/quotes/10338_500.jpg"/>-->
