--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <header>
         <img src="images/selfie_3.jpg">
         <div class="header_text">
-            <h1>CuriosityFTW</h1>
+            <h1 class="gradient_text_1">CuriosityFTW</h1>
             <p>A mind forever voyaging through turbulent seas of thoughts</p>
         </div>
     </header>
     <main>
         <section class="about_me">
-            <h1 class="gradient_text">About me</h1>
+            <h1 class="gradient_text_2">About me</h1>
             <h2>In a nutshell</h2>
             <p>Lazily learning and building this website, so will introduce myself soon. Check out the links below for now.</p>
             <!--<img src="https://cdn.tvgag.com/content/quotes/10338_500.jpg"/>-->
