--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
         <section class="about_me">
             <h1 class="gradient_text_2">About me</h1>
             <h2>In a nutshell</h2>
-            <p>Lazily learning and building this website, so will introduce myself soon. Check out the links below for now.</p>
+            <p>Steadily learning and building this website, so will introduce myself soon. Check out the links below for now.</p>
             <!--<img src="https://cdn.tvgag.com/content/quotes/10338_500.jpg"/>-->
         </section>       
         <div class="display1">
             <section class="blog">
-                <h1>Blog</h1>
+                <h1 class="gradient_text_2">Blog</h1>
                 <ul>
                     <li><a href="https://medium.com/curiosityftw">Blog</a></li>
                 </ul>
             </section>
             <section class="linkedin">
-                <h1>LinkedIn</h1>
+                <h1 class="gradient_text_2">LinkedIn</h1>
                 <ul>
                     <li><a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/">LinkedIn</a></li>
                 </ul>
             </section>
             <section class="projects">
-                <h1>Projects</h1>
+                <h1 class="gradient_text_2">Projects</h1>
                 <ul>
                     <li><a href="https://github.com/CuriosityFTW">Projects</a> (updates in progress...) </li>
                 </ul>
