--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
         </section>       
         <div class="display1">
             <section class="blog">
-                <h1 class="gradient_text_2">Blog</h1>
+                <h1>Blog</h1>
                 <ul>
                     <li><a href="https://medium.com/curiosityftw">Blog</a></li>
                 </ul>
             </section>
             <section class="linkedin">
-                <h1 class="gradient_text_2">LinkedIn</h1>
+                <h1>LinkedIn</h1>
                 <ul>
                     <li><a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/">LinkedIn</a></li>
                 </ul>
             </section>
             <section class="projects">
-                <h1 class="gradient_text_2">Projects</h1>
+                <h1>Projects</h1>
                 <ul>
                     <li><a href="https://github.com/CuriosityFTW">Projects</a> (updates in progress...) </li>
                 </ul>
