--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
             <section class="blog">
                 <h1>Blog</h1>
                 <ul>
-                    <li><a href="https://medium.com/curiosityftw">Blog</a></li>
+                    <li><a href="https://medium.com/curiosityftw">Learn more</a></li>
                 </ul>
             </section>
             <section class="linkedin">
                 <h1>LinkedIn</h1>
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/">LinkedIn</a></li>
+                    <li><a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/">Learn more</a></li>
                 </ul>
             </section>
             <section class="projects">
                 <h1>Projects</h1>
                 <ul>
-                    <li><a href="https://github.com/CuriosityFTW">Projects</a> (updates in progress...) </li>
+                    <li><a href="https://github.com/CuriosityFTW">Learn more</a></li>
                 </ul>
             </section>
         </div>
