--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <section class="blog">
                 <h1>Blog</h1>
                 <ul>
-                    <li><a href="https://medium.com/curiosityftw" class="learn_more">Learn more</a></li>
+                    <li><a href="https://medium.com/curiosityftw">Learn more</a></li>
                 </ul>
             </section>
             <section class="linkedin">
