--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         <section class="about_me">
             <h1 class="gradient_text_2">About me</h1>
             <h2>In a nutshell</h2>
-            <p>Steadily learning and building this website, so will introduce myself soon. Check out the links below for now.</p>
+            <p>Born in the industrious town of Bokaro, Jharkhand, and nurtured by the rich cultural fabric of India, my journey began amidst steel furnaces that fueled my curiosity about machines. From my school days at DPS Bokaro to the rigorous academic corridors of IIT Kharagpur, where I earned a Bachelor’s in Manufacturing Science and Engineering in 2020, my passion for engineering grew at every stage.
+The first stepping stone in my journey was designing formula-style racing cars during college – an experience that honed my pragmatic research, teamwork, and leadership skills. Internships at Pennsylvania State University and Airbus introduced me to the frontiers of Additive Manufacturing, where I explored how materials and mechanics interplay to engineer products in novel ways.
+My professional narrative has spanned the vibrant states of India and multidisciplinary engineering. From designing ventilators at Noccarc Robotics during COVID-19 to agricultural drones at General Aeronautics, I have embraced challenges that demanded perseverance, adaptability, and innovation. Today, as a Flight Controls Engineer at Airbus, I contribute to the next-generation aircraft wing designs, advancing aviation safety and performance.
+Through these diverse chapters, one theme has emerged as my guiding star: a profound interest in robotics and its potential to transform human lives. My work has brought me to bustling cities, serene farmlands, and laboratories, introducing me to thousands of individuals who have shaped my worldview. Each endeavor has been a step toward understanding how machines can think, move, and serve in harmony with humanity – a story I am eager to continue scripting.
+</p>
             <!--<img src="https://cdn.tvgag.com/content/quotes/10338_500.jpg"/>-->
         </section>       
         <div class="display1">
