--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@ Through these diverse chapters, one theme has emerged as my guiding star: a prof
             <section class="blog">
                 <h1>Blog</h1>
                 <ul>
-                    <li><a href="https://medium.com/curiosityftw" class="learn_more">Learn more</a></li>
+                    <li><a href="https://medium.com/curiosityftw" class="learn_more" target="_blank">Learn more</a></li>
                 </ul>
             </section>
             <section class="linkedin">
                 <h1>LinkedIn</h1>
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/" class="learn_more">Learn more</a></li>
+                    <li><a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/" class="learn_more" target="_blank">Learn more</a></li>
                 </ul>
             </section>
             <section class="projects">
                 <h1>Projects</h1>
                 <ul>
-                    <li><a href="https://github.com/CuriosityFTW" class="learn_more">Learn more</a></li>
+                    <li><a href="https://github.com/CuriosityFTW" class="learn_more" target="_blank">Learn more</a></li>
                 </ul>
             </section>
         </div>
