--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 The first stepping stone in my journey was designing <span class="text_highlight">formula-style racing cars</span> during college – an experience that honed my pragmatic research, teamwork, and leadership skills. Internships at Pennsylvania State University and Airbus introduced me to the frontiers of <span class="text_highlight">additive manufacturing</span>, where I explored how materials and mechanics interplay to engineer products in novel ways.
 My professional narrative has spanned the vibrant states of India and multidisciplinary engineering. From designing <span class="text_highlight">ventilators</span> at Noccarc Robotics during COVID-19 to <span class="text_highlight">agricultural drones</span> at General Aeronautics, I have embraced challenges that demanded perseverance, adaptability, and innovation. Today, as a Flight Controls Engineer at Airbus, I design <span class="text_highlight">next-generation aircraft wings</span>, advancing aviation safety and performance.
 Through these diverse chapters, one theme has emerged as my guiding star: a profound interest in <span class="text_highlight">robotics</span> and its potential to transform human lives. My work has brought me to bustling cities, serene farmlands, and laboratories, introducing me to thousands of individuals who have shaped my worldview. Each endeavor has been a step toward understanding how machines can think, move, and serve in harmony with humanity – a story I am eager to continue scripting.
+
+                text
 </p>
             <p class="para_spacing"><span style="color: black;">To learn more, check out the links below.</span></p>
             <!--<img src="https://cdn.tvgag.com/content/quotes/10338_500.jpg"/>-->
