--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ The first stepping stone in my journey was designing <span class="text_highlight
 My professional narrative has spanned the vibrant states of India and multidisciplinary engineering. From designing <span class="text_highlight">ventilators</span> at Noccarc Robotics during COVID-19 to <span class="text_highlight">agricultural drones</span> at General Aeronautics, I have embraced challenges that demanded perseverance, adaptability, and innovation. Today, as a Flight Controls Engineer at Airbus, I design <span class="text_highlight">next-generation aircraft wings</span>, advancing aviation safety and performance.
 Through these diverse chapters, one theme has emerged as my guiding star: a profound interest in <span class="text_highlight">robotics</span> and its potential to transform human lives. My work has brought me to bustling cities, serene farmlands, and laboratories, introducing me to thousands of individuals who have shaped my worldview. Each endeavor has been a step toward understanding how machines can think, move, and serve in harmony with humanity – a story I am eager to continue scripting.
 </p>
-            <img src="images/learning_image.png">
+            <img class= "learning_image" src="images/learning_image.png">
             <p class="para_spacing_2"><span style="color: black;">To learn more, check out the links below.</span></p>
             <!--<img src="https://cdn.tvgag.com/content/quotes/10338_500.jpg"/>-->
         </section>       
