--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Through these diverse chapters, one theme has emerged as my guiding star: a prof
             <div class="learning_image">
                 <img src="images/learning_image.png">
             </div>
-            <p class="para_spacing_2"><span style="color: black;">To learn more, check out the links below.</span></p>
+            <p class="para_spacing_2"><span style="color: black;">Me right now learning HTML and CSS and building this website.</span></p>
             <!--<img src="https://cdn.tvgag.com/content/quotes/10338_500.jpg"/>-->
         </section>       
         <div class="display1">
@@ -57,7 +57,7 @@ Through these diverse chapters, one theme has emerged as my guiding star: a prof
         </div>
     </main>
     <footer>
-        <p>&copy; 2024 CuriosityFTW. All Rights Reserved.</p>
+        <p>&copy; 2024 CuriosityFTW. All rights reserved.</p>
         <!--<p>Visitor count: <?php include 'counter.php'; ?></p>-->
     </footer>
 </body>
