--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Through these diverse chapters, one theme has emerged as my guiding star: a prof
     </main>
     <footer>
         <p>&copy; 2024 CuriosityFTW. All rights reserved.</p>
-        <!--<p>Visitor count: <?php include 'counter.php'; ?></p>-->
+        <p>Visitor count: <?php include 'counter.php'; ?></p>
     </footer>
 </body>
 </html>
