--- a/index.html
+++ b/index.html
@@ -58,7 +58,19 @@ Through these diverse chapters, one theme has emerged as my guiding star: a prof
     </main>
     <footer>
         <p>&copy; 2024 CuriosityFTW. All rights reserved.</p>
-        <p>Visitor count: <?php include 'counter.php'; ?></p>
+        <!--<p>Visitor count: <?php include 'counter.php'; ?></p>-->
+        <p>Visitors: <span id="visitor-count">Loading...</span></p>
     </footer>
+    <script>
+        fetch('https://api.countapi.xyz/hit/curiosityftw.github.io/visits')
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById('visitor-count').innerText = data.value;
+            })
+            .catch(error => {
+                console.error('Error fetching visitor count:', error);
+                document.getElementById('visitor-count').innerText = "Error";
+            });
+    </script>
 </body>
 </html>
