--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         <img src="images/my_picture.jpg" style="border-radius: 50%; width: 100px; height: 100px;">
     </div>
     -->
+    <section class="menu_contact">
+        <ul>
+            <li><a href="adityashekharkumar@gmail.com" class="learn_more" target="_blank">Contact</a></li>
+        </ul>
+    </section>    
     <header>
         <img src="images/selfie_3.jpg">
         <div class="header_text">
