--- a/index.html
+++ b/index.html
@@ -28,12 +28,35 @@
         <a href="mailto:adityashekharkumar@gmail.com" class="learn_more" target="_blank">Contact</a></li>
     </section>
     -->
-    <script type="text/javascript">
-        var user = "adityashekharkumar";
-        var domain = "gmail.com";
-        document.write('<a href="mailto:' + user + '@' + domain + '" class="learn_more">Contact</a>');
-    </script>
-
+    
+    <div class="display2">
+        <section class="projects">
+            <h1>Projects</h1>
+            <ul>
+                <li><a href="https://github.com/CuriosityFTW" class="learn_more" target="_blank">Projects</a></li>
+            </ul>
+        </section>
+        <section class="blog">
+            <h1>Blog</h1>
+            <ul>
+                <li><a href="https://medium.com/curiosityftw" class="learn_more" target="_blank">Blog</a></li>
+            </ul>
+        </section>
+        <section class="linkedin">
+            <h1>LinkedIn</h1>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/" class="learn_more" target="_blank">LinkedIn</a></li>
+            </ul>
+        </section>        
+        <section class="menu_contact">
+            <script type="text/javascript">
+                var user = "adityashekharkumar";
+                var domain = "gmail.com";
+                document.write('<a href="mailto:' + user + '@' + domain + '" class="learn_more">Contact</a>');
+            </script>
+        </section>        
+    </div>
+    
     <header>
         <img src="images/selfie_3.jpg">
         <div class="header_text">
