--- a/index.html
+++ b/index.html
@@ -30,20 +30,17 @@
     -->
     
     <div class="display2">
-        <section class="projects">
-            <h1>Projects</h1>
+        <section class="menu_projects">
             <ul>
                 <li><a href="https://github.com/CuriosityFTW" class="learn_more" target="_blank">Projects</a></li>
             </ul>
         </section>
-        <section class="blog">
-            <h1>Blog</h1>
+        <section class="menu_blog">
             <ul>
                 <li><a href="https://medium.com/curiosityftw" class="learn_more" target="_blank">Blog</a></li>
             </ul>
         </section>
-        <section class="linkedin">
-            <h1>LinkedIn</h1>
+        <section class="menu_linkedin">
             <ul>
                 <li><a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/" class="learn_more" target="_blank">LinkedIn</a></li>
             </ul>
