--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
     
     <div class="display2">
         <section class="menu_projects">
-            <a href="https://github.com/CuriosityFTW" class="learn_more" target="_blank">Projects</a></li>
+            <a href="https://github.com/CuriosityFTW" class="menu_learn_more" target="_blank">Projects</a></li>
         </section>
         <section class="menu_blog">
-            <a href="https://medium.com/curiosityftw" class="learn_more" target="_blank">Blog</a></li>
+            <a href="https://medium.com/curiosityftw" class="menu_learn_more" target="_blank">Blog</a></li>
         </section>
         <section class="menu_linkedin">
-            <a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/" class="learn_more" target="_blank">LinkedIn</a></li>
+            <a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/" class="menu_learn_more" target="_blank">LinkedIn</a></li>
         </section>        
         <section class="menu_contact">
             <script type="text/javascript">
                 var user = "adityashekharkumar";
                 var domain = "gmail.com";
-                document.write('<a href="mailto:' + user + '@' + domain + '" class="learn_more">Contact</a>');
+                document.write('<a href="mailto:' + user + '@' + domain + '" class="menu_learn_more">Contact</a>');
             </script>
         </section>        
     </div>
