--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="mailto:adityashekharkumar@gmail.com" class="learn_more" target="_blank">Contact</a></li>
     </section>
     -->
-    
+    <!--
     <div class="display2">
         <section class="menu_projects">
             <a href="https://github.com/CuriosityFTW" class="menu_learn_more" target="_blank">Projects</a>
@@ -47,6 +47,17 @@
             </script>
         </section>        
     </div>
+    -->
+    <section class="display2">
+        <a href="https://github.com/CuriosityFTW" class="menu_learn_more" target="_blank">Projects</a>
+        <a href="https://medium.com/curiosityftw" class="menu_learn_more" target="_blank">Blog</a>
+        <a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/" class="menu_learn_more" target="_blank">LinkedIn</a>
+        <script type="text/javascript">
+            var user = "adityashekharkumar";
+            var domain = "gmail.com";
+            document.write('<a href="mailto:' + user + '@' + domain + '" class="menu_learn_more">Contact</a>');
+        </script>        
+    </section>
     
     <header>
         <img src="images/selfie_3.jpg">
