--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
   gtag('js', new Date());
   gtag('config', 'G-4MBJG09PBK');
 </script>
+
+<section class="display2">
+    <a href="https://github.com/CuriosityFTW" class="menu_learn_more" target="_blank">Projects</a>
+    <a href="https://medium.com/curiosityftw" class="menu_learn_more" target="_blank">Blog</a>
+    <a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/" class="menu_learn_more" target="_blank">LinkedIn</a>
+    <script type="text/javascript">
+        var user = "adityashekharkumar";
+        var domain = "gmail.com";
+        document.write('<a href="mailto:' + user + '@' + domain + '" class="menu_learn_more">Contact</a>');
+    </script>        
+</section>
     
 <body>
     <!--
@@ -48,6 +59,7 @@
         </section>        
     </div>
     -->
+    <!--
     <section class="display2">
         <a href="https://github.com/CuriosityFTW" class="menu_learn_more" target="_blank">Projects</a>
         <a href="https://medium.com/curiosityftw" class="menu_learn_more" target="_blank">Blog</a>
@@ -58,7 +70,7 @@
             document.write('<a href="mailto:' + user + '@' + domain + '" class="menu_learn_more">Contact</a>');
         </script>        
     </section>
-    
+    -->
     <header>
         <img src="images/selfie_3.jpg">
         <div class="header_text">
