--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Aditya Shekhar Kumar</title>
+    <title>CuriosityFTW</title>
     <link rel="stylesheet" href="styles.css">
 </head>
     
@@ -63,7 +63,7 @@
     <header>
         <img src="images/selfie_3.jpg">
         <div class="header_text">
-            <h1 class="gradient_text_1">CuriosityFTW</h1>
+            <h1 class="gradient_text_1">Aditya Shekhar Kumar</h1>
             <p>A mind forever voyaging through turbulent seas of thoughts</p>
         </div>
     </header>
