--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@ Through these diverse chapters, one theme has emerged as my guiding star: a prof
             <section class="projects">
                 <h1>Projects</h1>
                 <ul>
-                    <li><a href="https://github.com/CuriosityFTW" class="learn_more" target="_blank">Learn more</a></li>
+                    <!--<li><a href="https://github.com/CuriosityFTW" class="learn_more" target="_blank">Learn more</a></li>-->
+                    <li><a href="projects.html" class="learn_more" target="_blank">Learn more</a></li>
                 </ul>
             </section>
             <section class="blog">
