--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   gtag('config', 'G-4MBJG09PBK');
 </script>
     
-<body>
+<body class="main">
     <!--
     <div style="text-align: left; margin-top: 20px;">
         <img src="images/my_picture.jpg" style="border-radius: 50%; width: 100px; height: 100px;">
