--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
             <h2>Select a category</h2>
         </section>
         
-        <section class="display2">
+        <section class="display_dropdown">
             <a href="https://github.com/CuriosityFTW" class="menu_learn_more" target="_blank">Projects</a>
             <a href="https://medium.com/curiosityftw" class="menu_learn_more" target="_blank">Blog</a>
             <a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/" class="menu_learn_more" target="_blank">LinkedIn</a>     
