--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
     </header>
     
     <main>
-        <section class="about_me">
+        <section class="projects_category">
             <h2>Select a category</h2>
         </section>
         
