--- a/projects.html
+++ b/projects.html
@@ -31,13 +31,23 @@
         <div class="display_projects_category">
             <section class="projects_category">
                 <h2>Select a category</h2>
+                <ul>
+                    <li><a href="projects.html" class="menu_learn_more" target="_blank">Category_1</a></li>
+                </ul>
+                <ul>
+                    <li><a href="projects.html" class="menu_learn_more" target="_blank">Category_2</a></li>
+                </ul>
+                <ul>
+                    <li><a href="projects.html" class="menu_learn_more" target="_blank">Category_3</a></li>
+                </ul>                
             </section>
-            
+            <!--
             <section class="display_dropdown">
                 <a href="https://github.com/CuriosityFTW" class="menu_learn_more" target="_blank">Projects</a>
                 <a href="https://medium.com/curiosityftw" class="menu_learn_more" target="_blank">Blog</a>
                 <a href="https://www.linkedin.com/in/aditya-shekhar-a1a126126/" class="menu_learn_more" target="_blank">LinkedIn</a>     
             </section>
+            -->
         </div>
         <!--
         <div class="display1">
