--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,7 @@
         <div class="display_projects_category">
             <section class="projects_category">
                 <h2>Select a category</h2>
+                <!--
                 <ul>
                     <li><a href="projects.html" class="menu_learn_more" target="_blank">Category_1</a></li>
                 </ul>
@@ -39,8 +40,17 @@
                 </ul>
                 <ul>
                     <li><a href="projects.html" class="menu_learn_more" target="_blank">Category_3</a></li>
-                </ul>                
+                </ul>
+                -->
+                <a href="projects.html" class="menu_learn_more" target="_blank">Category_1</a>
+                <a href="projects.html" class="menu_learn_more" target="_blank">Category_2</a>
+                <a href="projects.html" class="menu_learn_more" target="_blank">Category_3</a>
             </section>
+            
+            <section class="projects_category">
+                <h2>Right box</h2>            
+            </section>
+            
             <!--
             <section class="display_dropdown">
                 <a href="https://github.com/CuriosityFTW" class="menu_learn_more" target="_blank">Projects</a>
