--- a/projects.html
+++ b/projects.html
@@ -28,16 +28,16 @@
     </header>
     
     <main>
-        <div class="display_projects_category">
+        <div class="left_right_boxes">
             <section class="left_box">
                 <h2>Left box</h2>
-                <ul>
+                <ul style="list-style-type: none; padding: 0; margin: 0;">
                     <li><a href="projects.html" class="menu_learn_more" target="_blank">Category_1</a></li>
                 </ul>
-                <ul>
+                <ul style="list-style-type: none; padding: 0; margin: 0;">
                     <li><a href="projects.html" class="menu_learn_more" target="_blank">Category_2</a></li>
                 </ul>
-                <ul>
+                <ul style="list-style-type: none; padding: 0; margin: 0;">
                     <li><a href="projects.html" class="menu_learn_more" target="_blank">Category_3</a></li>
                 </ul>
             </section>
