--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
     <main>
         <div class="left_right_boxes">
             <section class="left_box">
-                <h2>Left Box</h2>
+                <h2>Left box</h2>
                 <ul style="list-style-type: none; padding: 0; margin: 0;">
                     <li><a href="projects.html" class="menu_learn_more" target="_blank">Category_1</a></li>
                 </ul>
@@ -43,7 +43,7 @@
             </section>
             
             <section class="right_box">
-                <h2>Right Box</h2>            
+                <h2>Right box</h2>            
             </section>
             
             <!--
