--- a/projects.html
+++ b/projects.html
@@ -30,20 +30,20 @@
     <main>
         <div class="left_right_boxes">
             <section class="left_box">
-                <h2>Left box</h2>
+                <h2>left box</h2>
                 <ul style="list-style-type: none; padding: 0; margin: 0;">
-                    <li><a href="projects.html" class="menu_learn_more" target="_blank">Category_1</a></li>
+                    <li><a href="projects.html" class="category_button" target="_blank">category_1</a></li>
                 </ul>
                 <ul style="list-style-type: none; padding: 0; margin: 0;">
-                    <li><a href="projects.html" class="menu_learn_more" target="_blank">Category_2</a></li>
+                    <li><a href="projects.html" class="category_button" target="_blank">category_2</a></li>
                 </ul>
                 <ul style="list-style-type: none; padding: 0; margin: 0;">
-                    <li><a href="projects.html" class="menu_learn_more" target="_blank">Category_3</a></li>
+                    <li><a href="projects.html" class="category_button" target="_blank">category_3</a></li>
                 </ul>
             </section>
             
             <section class="right_box">
-                <h2>Right box</h2>            
+                <h2>right box</h2>            
             </section>
             
             <!--
