--- a/projects.html
+++ b/projects.html
@@ -32,13 +32,13 @@
             <section class="left_box">
                 <h2>left box</h2>
                 <ul style="list-style-type: none; padding: 0; margin: 0;">
-                    <li><a href="projects.html" class="category_button" target="_blank">category_1</a></li>
+                    <li><a href="projects.html" class="category_button">category_1</a></li>
                 </ul>
                 <ul style="list-style-type: none; padding: 0; margin: 0;">
-                    <li><a href="projects.html" class="category_button" target="_blank">category_2</a></li>
+                    <li><a href="projects.html" class="category_button">category_2</a></li>
                 </ul>
                 <ul style="list-style-type: none; padding: 0; margin: 0;">
-                    <li><a href="projects.html" class="category_button" target="_blank">category_3</a></li>
+                    <li><a href="projects.html" class="category_button">category_3</a></li>
                 </ul>
             </section>
             
