--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,7 @@
         <div class="left_right_boxes">
             <section class="left_box">
                 <h2>left box</h2>
+                <!--
                 <ul style="list-style-type: none; padding: 0; margin: 0;">
                     <li><a href="projects.html" class="category_button">category_1</a></li>
                 </ul>
@@ -40,6 +41,16 @@
                 <ul style="list-style-type: none; padding: 0; margin: 0;">
                     <li><a href="projects.html" class="category_button">category_3</a></li>
                 </ul>
+                -->
+                <ul style="list-style-type: none; padding: 0; margin: 0;">
+                    <li><button class="category_button">category_1</button></li>
+                </ul>
+                <ul style="list-style-type: none; padding: 0; margin: 0;">
+                    <li><button class="category_button">category_2</button></li>
+                </ul>
+                <ul style="list-style-type: none; padding: 0; margin: 0;">
+                    <li><button class="category_button">category_3</button></li>
+                </ul>                
             </section>
             
             <section class="right_box">
