--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
                 </ul>
                 -->
                 
-                <ul style="list-style-type: none; padding: 0; margin: 0;">
+                <ul class="categories">
                   <li><a href="projects.html?selected=category_1" class="category_button" data-category="category_1">category_1</a></li>
                   <li><a href="projects.html?selected=category_2" class="category_button" data-category="category_2">category_2</a></li>
                   <li><a href="projects.html?selected=category_3" class="category_button" data-category="category_3">category_3</a></li>
