--- a/projects.html
+++ b/projects.html
@@ -30,8 +30,8 @@
     <main>
         <div class="left_right_boxes">
             <section class="left_box">
-                <h2>Choose a domain.<br>
-                Explore what I have built.</h2>
+                <h2>Choose a domain.</h2>
+                <h2>Explore what I have built.</h2>
                 
                 <!--
                 <ul style="list-style-type: none; padding: 0; margin: 0;">
