--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section class="about_me">
             <h1 class="gradient_text_2">About me</h1>
             <h2>In a nutshell</h2>
-            <p class="para_spacing_1">Born in the industrious town of <span class="text_highlight">Bokaro, Jharkhand</span>, and nurtured by the rich cultural fabric of <span class="text_highlight">India</span>, my journey began amidst steel furnaces that fueled my curiosity about machines. From my school days at DPS Bokaro to the rigorous academic corridors of <span class="text_highlight">IIT Kharagpur</span>, where I earned a <span class="text_highlight">Bachelor’s in Manufacturing Science and Engineering</span> in 2020, my passion for engineering grew at every stage.
+            <p class="para_spacing_1">Born in the industrious town of <span class="text_highlight">Bokaro, Jharkhand</span>, and nurtured by the rich cultural fabric of <span class="text_highlight">India</span>, my journey began amidst steel furnaces that fueled my curiosity about machines. From my school days at <span class="text_highlight">DPS Bokaro</span> to the rigorous academic corridors of <span class="text_highlight">IIT Kharagpur</span>, where I earned a <span class="text_highlight">Bachelor’s in Manufacturing Science and Engineering</span> in 2020, my passion for engineering grew at every stage.
 The first stepping stone in my journey was designing <span class="text_highlight">formula-style racing cars</span> during college – an experience that honed my pragmatic research, teamwork, and leadership skills. Internships at Pennsylvania State University and Airbus introduced me to the frontiers of <span class="text_highlight">additive manufacturing</span>, where I explored how materials and mechanics interplay to engineer products in novel ways.
 My professional narrative has spanned the vibrant states of India and multidisciplinary engineering. From designing <span class="text_highlight">ventilators</span> at Noccarc Robotics during COVID-19 to <span class="text_highlight">agricultural drones</span> at General Aeronautics, I have embraced challenges that demanded perseverance, adaptability, and innovation. Today, as a Flight Controls Engineer at Airbus, I design <span class="text_highlight">next-generation aircraft wings</span>, advancing aviation safety and performance.
 Through these diverse chapters, one theme has emerged as my guiding star: a profound interest in <span class="text_highlight">robotics</span> and its potential to transform human lives. My work has brought me to bustling cities, serene farmlands, and laboratories, introducing me to thousands of individuals who have shaped my worldview. Each endeavor has been a step toward understanding how machines can think, move, and serve in harmony with humanity – a story I am eager to continue scripting.
@@ -50,7 +50,7 @@ Through these diverse chapters, one theme has emerged as my guiding star: a prof
             <div class="learning_image">
                 <img src="images/learning_image.png">
             </div>
-            <p class="para_spacing_2"><span style="color: black;">Me right now learning HTML and CSS and building this website.</span></p>
+            <p class="para_spacing_2"><span style="color: black;">Me right now learning HTML, CSS, and JavaScript and building this website.</span></p>
             <!--<img src="https://cdn.tvgag.com/content/quotes/10338_500.jpg"/>-->
         </section>       
         
