--- a/project_aerial_robotics.html
+++ b/project_aerial_robotics.html
@@ -1,2 +1,23 @@
-<h2>aerial robotics</h2>
-<p>add description</p>
+<section class="project_mission">
+  <h1 class="mission_title">MISSION 1</h1>
+  <div class="mission_meta">
+    <p><strong>COMPANY:</strong> General Aeronautics Pvt. Ltd.</p>
+    <p><strong>LOCATION:</strong> Bengaluru, India</p>
+    <p><strong>DURATION:</strong> Apr 2023 – Aug 2023</p>
+    <p><strong>ROLE:</strong> Senior GNC Engineer</p>
+  </div>
+
+  <div class="mission_objective">
+    <h2>Objective</h2>
+    <p>Extend drone's mission continuation time during GPS yaw timeout failure.</p>
+  </div>
+
+  <div class="mission_contributions">
+    <h2>My contributions</h2>
+    <ul>
+      <li>Developed sensor failsafe algorithms in ArduPilot for a 49 kg agri-drone</li>
+      <li>Modeled gyroscope using Allan variance to estimate yaw drift and bias instability</li>
+      <li>Extended drone’s operational time by 7 minutes through flight test validations</li>
+    </ul>
+  </div>
+</section>
