--- a/project_aircraft.html
+++ b/project_aircraft.html
@@ -1,2 +1,37 @@
+<!--
 <h2>aircraft</h2>
 <p>add description</p>
+-->
+
+<div class="accordion-item">
+  
+  <div class="accordion-header">
+    project 1 <span class="arrow">▼</span>
+  </div>
+  
+  <div class="accordion-content">
+    <p>project 1 description</p>
+  </div>
+</div>
+
+<div class="accordion-item">
+  
+  <div class="accordion-header">
+    project 2 <span class="arrow">▼</span>
+  </div>
+  
+  <div class="accordion-content">
+    <p>project 2 description</p>
+  </div>
+</div>
+
+<div class="accordion-item">
+  
+  <div class="accordion-header">
+    project 3 <span class="arrow">▼</span>
+  </div>
+  
+  <div class="accordion-content">
+    <p>project 3 description</p>
+  </div>
+</div>
